--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.2",
     "react-scripts": "3.4.1",
     "sass": "^1.26.10",
-    "semantic-ui-react": "^1.0.0"
+    "semantic-ui-react": "^1.0.0",
+    "three": "^0.119.1"
   },
   "scripts": {
     "start": "react-scripts start",
